--- a/views/index.jade
+++ b/views/index.jade
@@ -25,4 +25,4 @@ block content
 		#talk
 			.message-input
 				input(type="text" id="message" autocomplete="off" required)
-				button Send
+				button Post
