--- a/views/index.jade
+++ b/views/index.jade
@@ -24,5 +24,5 @@ block content
 	#dollars-room(style="display: none")
 		#talk
 			.message-input
-				input(type="text" id="message" autocomplete="off" required)
+				input(type="text" id="message" autocomplete="off" placeholder="ENTER" required)
 				button Post
