--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,6 +1,9 @@
 doctype html
 html
 	head
+		meta(name="format-detection" content="telephone=no")
+		meta(name="format-detection" content="email=no")
+		meta(content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=0" name="viewport")
 		title= title
 		link(rel='stylesheet', href='/stylesheets/style.css')
 		script(type='text/javascript', src="/javascripts/jquery.min.js")
