--- a/views/index.jade
+++ b/views/index.jade
@@ -19,8 +19,7 @@ block content
 				label(for="form-chat") Chat to:
 				input(type="text" id="form-chat" name="name" size="10" maxlength="20" class="login-name-input" required autocomplete="on")
 			.chat-submit
-				input(type="submit" name="login" value="ENTER" class="login-submit-input")
-			.chat-response
+				input(type="submit" id="form-private-name" name="login" value="ENTER" class="login-submit-input")
 	#dollars-room(style="display: none")
 		#talk
 			.message-input
