--- a/views/index.jade
+++ b/views/index.jade
@@ -5,6 +5,7 @@ block content
 	//- p Welcome to #{title}
 	#dollars
 		.login-logo
+			img(src="../images/dollars.svg")
 		.login-name
 			label(for="form-name") Username:
 			input(type="text" id="form-name" name="name" size="10" maxlength="20" class="login-name-input" required autocomplete="on")
