add avatar select support

--- a/views/index.jade
+++ b/views/index.jade
@@ -12,6 +12,16 @@ block content
 		.login-submit
 			input(type="submit" name="login" id="login-submit" value="ENTER" class="login-submit-input")
 	#dollars-options(style="display: none")
+		.chat-avatar-select
+			p Select Avatar
+			.avatar-select.avatar-bakyura(data-avatar="bakyura")
+			.avatar-select.avatar-gg(data-avatar="gg")
+			.avatar-select.avatar-setton(data-avatar="setton")
+			.avatar-select.avatar-kanra(data-avatar="kanra")
+			.avatar-select.avatar-tanaka(data-avatar="tanaka")
+			.avatar-select.avatar-zaika(data-avatar="zaika")
+			.avatar-select.avatar-zawa(data-avatar="zawa")
+			.avatar-select.avatar-kakka(data-avatar="kakka")
 		.chat-select
 			.chat-broadcast Public Chat
 			.chat-privately Private Chat
